# engine

./: EngineErrorMap.md  LICENSE.md  cc.config.json  package-lock.json  package.json  tsconfig.json  typedoc-index.ts
.github/workflows/: generate-oh-sdk-cache.yml  native-compile-platforms.yml  native-linter-android.yml  package-size-check.js  web-interface-check.yml
@types/: jsb.d.ts
cocos/: root.jsb.ts  root.ts
cocos/2d/assets/: bitmap-font.ts  font.ts  sprite-atlas.ts  sprite-frame.ts
cocos/2d/components/: graphics.ts  label.ts  mask.ts  rich-text.ts  sprite.ts  (+2 more)
cocos/core/: scheduler.ts  settings.ts
cocos/dragon-bones/: ArmatureDisplay.ts  CCArmatureDisplay.ts
cocos/game/: director.ts  game.ts  splash-screen.ts
cocos/input/: input.ts
cocos/native-binding/: index.ts
cocos/particle/: particle-system.ts
cocos/particle-2d/: motion-streak-2d-assembler.ts  motion-streak-2d.ts  particle-system-2d.ts  png-reader.ts  tiff-reader.ts
cocos/primitive/: primitive.ts
cocos/rendering/: define.ts  pipeline-scene-data-utils.ts
cocos/scene-graph/: component-scheduler.ts  component.ts  deprecated.ts  layers.ts  node-activator.ts  node-dev.ts  node-enum.ts  node-event-processor.ts  node-ui-properties.ts  node.jsb.ts  node.ts  scene-globals.ts
cocos/serialization/: ccon.ts  deserialize-dynamic.ts  instantiate-jit.ts  instantiate.ts
cocos/sorting/: sorting-layers.ts
cocos/spine/: skeleton-cache.ts  skeleton-data.ts  skeleton.ts
cocos/terrain/: terrain.ts
cocos/tiledmap/: tiled-layer.ts  tiled-map.ts  tiled-object-group.ts  tiled-tile.ts  tiled-utils.ts
cocos/tween/: tween.ts
cocos/ui/: button.ts  layout.ts  page-view-indicator.ts  page-view.ts  progress-bar.ts  scroll-bar.ts  scroll-view.ts  slider.ts  sub-context-view.ts  view.ts  widget-manager.ts  widget.ts
cocos/video/: video-player-impl.ts  video-player.ts
cocos/web-view/: web-view-impl-web.ts  web-view-impl.ts  web-view.ts
editor/engine-features/: render-config.json
exports/: vendor.ts
native/: .gitignore  CMakeLists.txt  external-config.json
native/cocos/: cocos-version.h
native/cocos/editor-support/spine-wasm/: AtlasAttachmentLoaderExtension.cpp  AtlasAttachmentLoaderExtension.h  CMakeLists.txt  spine-model.cpp  spine-model.h  spine-skeleton-instance.cpp  spine-skeleton-instance.h  spine-type-export.cpp  spine-wasm.cpp  spine-wasm.h  wasmSpineExtension.cpp
native/cocos/editor-support/spine-wasm/scripts/: generate_compile_commands_emscripten.sh
pal/input/: touch-manager.ts
pal/pacer/: pacer-minigame.ts
tests/tween/: tween.test.ts
(+387 files in other folders)
